# community-genesis

./: Cargo.toml  README.md  package.json
res/: minified.wasm  normal.wasm  normal_community.wasm  test.wasm
scripts/: code_manager.js  config.js  multi-upgrade.js  package.json  serilizer.js  upload.js
src/: lib.rs  owner.rs  resolver.rs  utils.rs  view.rs
